# Reverse-Akinator-OP

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  backup-db.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  index.html  pyproject.toml  requirements.txt  zzz  zzz_plan_for_KG_RAG.txt  zzz_todos
client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
data/: character_data.csv  characters.csv  games.csv  user_ignored.csv  user_preferences.csv  user_ratings.csv
docker/: Dockerfile  docker-compose.yaml
scripts/: backup-db.sh
scripts/bootstrap_tools/: README.md  bootstrap_orchestrator.py  bootstrap_settings.py
server/: .gitignore  DataManager.py  GameManager.py  GameService.py  LLMService.py  README.md  Repository.py  SessionManager.py  character_controller.py  db_models.py  dependencies.py  game_controller.py  game_service.py  mockData.py  models.py  requirements.txt  routes.py  server.py  table_canon.csv  table_non_canon.csv
server/bootstrap_tools/: bootstrap.py  download_images.py  fetch_character_data.py  user_preferences.py
server/config/: __init__.py  database.py  redis.py  redis_client.py  settings.py  vector_db.py
server/data/: app.db  app.db-shm  app.db-wal  arc_list.json  character_data.csv  database.py  game_prompt.txt
server/database/: app.db  arcs.json  database.py  db_models.py  game_prompt.txt
server/llm/: gemini.py  llm_interface.py
server/models/: db_arc.py  db_character.py
server/pydantic_schemas/: game_schemas.py  session_schemas.py
server/routes/: characters.py  game.py  main.py  session.py
server/schemas/: character_schemas.py  data_schemas.py  game_schemas.py  session_schemas.py  user_schemas.py
server/services/: arc_service.py  character_service.py  game_manager.py  game_service.py  (+2 more)
src/: App.tsx  index.css
(+170 files in other folders)
